--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,7 +134,7 @@ h6 {
     flex:2;
 }
 #card {
-    background-color: rgb(255, 251, 196);
+    background-color:rgb(212, 213, 213);
     padding: 10px;
     border-radius: 10px;
     display: flex;
@@ -213,7 +213,26 @@ textarea {
     padding-bottom: 6px;
     width:100px;
 }
+#carousel-trinket {
+    background-color:#CC8BFF;
+    border-radius: 4px;
+    padding: 20px;
+}
+.carousel-caption {
+    
+    background-color: #1a1a1a;
+}
 
+.carousel-item img {
+    width: 70%;
+}
+#profile {
+    width: 40%;
+    height: max-content;
+}
+#interests p {
+    text-align: right;
+}
 .float {
     background-color:#FFF38B;
     border: none;
