--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,7 +100,7 @@ h6 {
 }
 .hero {
     height: 70vh;
-    background-image: url(/images/banner2.png);
+    background-image: url(images/banner2.png);
     background-attachment:fixed;
     background-repeat: no-repeat;
     background-size: contain;
