--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -1,19 +1,16 @@
 
 #projects {
-    gap: 20px;
     text-align: center;
 
-    #card {
+    .card {
         background-color:$mainColor;
         padding: 20px;
         border-radius: 10px;
-        display: flex;
-        flex-direction: column ;
-        gap:8px;
+        border: 0;
+        
         cursor: pointer;
-        justify-content: space-around;
-
-        a {
+        
+        .card-link {
             color: $blackColor;
             text-decoration: none;
         }
