--- a/styles/partials/_reset.scss
+++ b/styles/partials/_reset.scss
@@ -6,7 +6,6 @@
     box-sizing: border-box;
     
     &::selection {
-        background-color: $blackColor;
-        color: $secondaryColor;
+        background-color: $secondaryColor;
     }
 }
