--- a/styles/partials/_carousel.scss
+++ b/styles/partials/_carousel.scss
@@ -11,9 +11,8 @@
         border-radius: 6px;
         padding: 8px;
 
-        a {
-            text-decoration: none;
-            color: $blackColor;
+        .carousel-link {
+            color: $secondaryColor;
         }
     }
 
