--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -3,16 +3,35 @@
     text-align: center;
 
     .card {
-        background-color:$mainColor;
+        background-color:rgb(255, 249, 214);
         padding: 20px;
         border-radius: 10px;
         border: 0;
-        
+        height: 50vh;
         cursor: pointer;
+        transition: all 400ms;
+        
+        &:hover { 
+            transform: scale(1.02) translateY(-6px)
+            translateX(-6px);
+            box-shadow: rgba(0, 0, 0, 0.25) 2.95px 1.95px 4.6px;
+            background-color: $mainColor;
+        }
         
         .card-link {
             color: $blackColor;
             text-decoration: none;
+            transition: all 250ms;
+
+            &:hover {
+                color: $secondaryColor;
+            }
+        }
+
+        img {
+            align-self: center;
+            width: 400px;
+            padding: 10px;
         }
     }
 }
@@ -33,3 +52,39 @@
     }
     
 }
+
+.bottom {
+    background-color: $mainColor;
+    width: 100%;
+    height: 20vh;
+    text-align: center;
+    padding: 30px;
+
+    .cta{
+        border:0;
+        background-color: $secondaryColor;
+        padding: 15px;
+        border-radius: 6px;
+        transition: background-color 300ms, color 400ms ease-in;
+        -webkit-animation:wobble-hor-bottom .8s both;animation:wobble-hor-bottom .8s both;
+        animation-delay: 8s;
+        animation-iteration-count: 3;
+        animation-delay: 2s;
+
+        &:hover{
+            background: $blackColor;
+        }
+        
+        a{
+            text-decoration: none;
+            color: $blackColor;
+
+            &:hover {
+                color: $secondaryColor;
+            }
+        }
+    }
+}
+
+
+
