--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,20 +1,22 @@
 footer {
-    padding: 10px;
     bottom: 0;
     background-color: $tertiaryColor;
 
     .float {
         background-color: $mainColor;
         border: none;
-        border-radius: 6px;
-        padding-top: 10px;
-        padding-inline:16px;
-        padding-bottom: 6px;
         position: fixed;
-        bottom: 40px;
-        right: 10px;
+        bottom: 50px;
+        right: 20px;
+        padding-inline: 18px;
+        padding-block: 10px;
         text-decoration: none;
         color: $blackColor;
-        
+        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+        transition: transform 250ms ease-out;
+
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 }
