--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -56,19 +56,21 @@
 .bottom {
     background-color: $mainColor;
     width: 100%;
-    height: 20vh;
+    height: 30vh;
     text-align: center;
     padding: 30px;
+    justify-items: space-around;
 
     .cta{
         border:0;
         background-color: $secondaryColor;
-        padding: 15px;
-        border-radius: 6px;
+        height: 50px;
+        padding-top: 8px;
+        width:160px;
         transition: background-color 300ms, color 400ms ease-in;
         -webkit-animation:wobble-hor-bottom .8s both;animation:wobble-hor-bottom .8s both;
         animation-delay: 8s;
-        animation-iteration-count: 3;
+        animation-iteration-count: 2;
         animation-delay: 2s;
 
         &:hover{
