--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 #projects {
   text-align: center;
 
@@ -53,12 +55,11 @@
 .bottom {
   background-color: $mainColor;
   width: 100%;
-  height: 30vh;
-  padding: 30px;
+  padding: 20px;
 
   .bottom-content {
-    text-align: center;
     align-content: center;
+    text-align: center;
 
     .cta {
       border: 0;
@@ -88,15 +89,13 @@
     }
   }
 
-  .img {
-    justify-content: space-between;
-    img {
-      width: 10%;
-      animation-name: rotacion;
-      animation-duration: 2s;
-      animation-iteration-count: infinite;
-      animation-direction: alternate-reverse;
-      animation-timing-function: ease-in-out;
-    }
+  .img-bottom {
+    animation-name: rotacion;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    animation-timing-function: ease-in-out;
+
+
   }
 }
